fix: configure CORS to read allowed origins from properties file